# asri

./: .gitignore  00_readme.txt  EISCAT3D_receivers.txt  Eiscat3D_transmitter.txt  J.csv  README.md  j19.csv  konstanter.py  krysskorr_normford.py  licence.md  misc.py  plasma.py  plasma_funcs.py  pyproject.toml  radarl.py  radaro3.py  recovering.py  storj.csv
programdata/: J_liten.csv
programdata/img/: licence.md
src/asri/: isrcalc.py  konstanter.py  krysskorr_normford.py  plasma_funcs.py  radarl.py  radaro3.py  recovering.py  verktøy.py
tests/: __init__.py
